# obs-studio

libobs/: obs-audio.c  obs-internal.h  obs-properties.c  obs-properties.h  obs-scene.c  obs-source.c  obs-source.h  obs-video.c  obs.c  obs.h
libobs/graphics/: vec4.h
libobs/media-io/: audio-io.c  audio-io.h
obs/: platform-osx.mm  platform-windows.cpp  platform.hpp  properties-view.cpp  properties-view.hpp  window-basic-main-transitions.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-settings.cpp
obs/data/locale/: en-US.ini
obs/forms/: OBSBasic.ui
plugins/: CMakeLists.txt
plugins/audio-vis/: CMakeLists.txt  audio-fft.c  audio-fft.h  audio-monitor.c  audio-monitor.h  audio-spectrum.c  audio-spectrum.h  audio-vis.c  avis-buffer.c  avis-buffer.h  avis-monitor.c  avis-monitor.h  hwa-buffer.c  hwa-buffer.h  hwa-monitor.c  hwa-monitor.h  vis-spectrum.c  vis-spectrum.h  visual.c  visual.h
plugins/audio-vis-fr/: CMakeLists.txt  avis-capture.c  avis-capture.h  avis-source.c  avis.c
plugins/audio-vis/data/: preprocess.effect
plugins/audio-visualiser/: CMakeLists.txt  audiodata.cpp  audiodata.hpp  audiosource.cpp  audiosource.hpp  plugin-main.cpp  vis-scope.cpp  vis-scope.hpp  visualiser.cpp  visualiser.hpp
plugins/audio-visualiser/data/locale/: en-US.ini
plugins/audio-visualizer/: CMakeLists.txt  audio-visualizer.c  audiobuf.h  audiocapture.c  audiocapture.h  slidingbuf.h  vg.c  vg.h  vis-spectrum.c
plugins/audio-visualizer/data/: shapes.effect
plugins/audio-visualizer/data/locale/: en-US.ini
plugins/line-aa/: CMakeLists.txt  audio-window.h  line-aa.c
plugins/line-aa/data/: line_aa.effect  texture.effect
plugins/obs-transitions/: CMakeLists.txt  obs-transitions.c  transition-fadetofrom.c  transition-luma-wipe.c  transition-swipe.c
plugins/obs-transitions/data/: fade_tofrom_transition.effect  luma_wipe_transition.effect  swipe_transition.effect
plugins/obs-transitions/data/locale/: en-US.ini
plugins/test-tri3d/: CMakeLists.txt  camera.cpp  camera.hpp  effect.cpp  effect.hpp  index-buffer.cpp  index-buffer.hpp  model.cpp  model.hpp  object.cpp  object.hpp  object3D.c  object3D.h  plugin-main.cpp  render-target.cpp  render-target.hpp  source.cpp  test-tri3d.c  texture-renderer.cpp  texture-renderer.hpp  texture.hpp  textured-rectangle.h  transform.cpp  transform.hpp  vertex-buffer.cpp  vertex-buffer.hpp
plugins/test-tri3d/data/: rectangle.effect  tri3d.effect
plugins/text-freetype2/: text-functionality.c
plugins/text-freetype2/data/: text_default.effect
